--- a/SapVisual/Busqueda/busquedamaestra.ui
+++ b/SapVisual/Busqueda/busquedamaestra.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>365</width>
-    <height>280</height>
+    <width>343</width>
+    <height>320</height>
    </rect>
   </property>
   <property name="font">
@@ -23,7 +23,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="tabPosition">
-      <enum>QTabWidget::East</enum>
+      <enum>QTabWidget::North</enum>
      </property>
      <property name="tabShape">
       <enum>QTabWidget::Triangular</enum>
@@ -31,7 +31,28 @@
      <property name="currentIndex">
       <number>0</number>
      </property>
+     <property name="iconSize">
+      <size>
+       <width>32</width>
+       <height>32</height>
+      </size>
+     </property>
+     <property name="elideMode">
+      <enum>Qt::ElideNone</enum>
+     </property>
+     <property name="usesScrollButtons">
+      <bool>true</bool>
+     </property>
      <property name="documentMode">
+      <bool>true</bool>
+     </property>
+     <property name="tabsClosable">
+      <bool>false</bool>
+     </property>
+     <property name="movable">
+      <bool>false</bool>
+     </property>
+     <property name="tabBarAutoHide">
       <bool>true</bool>
      </property>
      <widget class="QWidget" name="tab_3">
@@ -76,13 +97,13 @@
                <property name="topMargin">
                 <number>0</number>
                </property>
-               <item row="1" column="1">
-                <widget class="QDateEdit" name="EditFecha">
-                 <property name="displayFormat">
-                  <string>yyyy/MM/dd</string>
+               <item row="1" column="0">
+                <widget class="QLabel" name="labelDesde">
+                 <property name="text">
+                  <string>Desde:</string>
                  </property>
-                 <property name="calendarPopup">
-                  <bool>true</bool>
+                 <property name="alignment">
+                  <set>Qt::AlignCenter</set>
                  </property>
                 </widget>
                </item>
@@ -96,16 +117,6 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="0">
-                <widget class="QLabel" name="labelDesde">
-                 <property name="text">
-                  <string>Desde:</string>
-                 </property>
-                 <property name="alignment">
-                  <set>Qt::AlignCenter</set>
-                 </property>
-                </widget>
-               </item>
                <item row="3" column="0">
                 <widget class="QLabel" name="labelHasta">
                  <property name="text">
@@ -113,6 +124,16 @@
                  </property>
                  <property name="alignment">
                   <set>Qt::AlignCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="1">
+                <widget class="QDateEdit" name="EditFecha">
+                 <property name="displayFormat">
+                  <string>yyyy/MM/dd</string>
+                 </property>
+                 <property name="calendarPopup">
+                  <bool>true</bool>
                  </property>
                 </widget>
                </item>
